--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@giphy/react-native-sdk": "^5.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
